# game-of-life

./: .gitignore  README.md  pyproject.toml
src/game_of_life/: display.py  driver.py  grid.py  main.py  rules.py
tests/: test_driver.py  test_grid.py  test_rules.py
