[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = "Simple game of life implementation, which purpose is to experiment with poetry and pytest"
authors = ["Esteban Muñoz"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
windows-curses = {version = "^2.3.2", platform = "win32"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
